--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/frsmtv/kemptown",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -15,7 +15,9 @@
     "jquery": "^3.1.1",
     "animatedmodal": "*",
     "animate.css": "^3.5.2",
-    "scrollme": "^1.1.0",
-    "materialize": "^0.97.8"
-  }
+    "scrollme": "^1.1.0"
+  },
+  "authors": [
+    "frsmtv <fsimitchiev@gmail.com>"
+  ]
 }
